# iai_robots

iai_adapter_iso50_kinect2_description/: CMakeLists.txt  package.xml
iai_adapter_iso50_kinect2_description/launch/: display.launch.py
iai_adapter_iso50_kinect2_description/rviz2/: default.rviz
iai_adapter_iso50_kinect2_description/urdf/: adapter_iso50_kinect2.urdf.xacro
iai_adapters_description/: CMakeLists.txt  package.xml
iai_adapters_description/launch/: display_infrastructure.launch.py
iai_boxy_base/: CMakeLists.txt  package.xml
iai_boxy_base/launch/: display.launch.py  gazebo.launch.py
iai_boxy_base_2/launch/: visualise.launch.py
iai_boxy_base_2/robots/: base.xacro
iai_boxy_bringup/config/: kinematics.yaml
iai_boxy_bringup/launch/: boxy_arm_ik.launch.py  boxy_odometry_sim.launch.py  boxy_saphari_sim.launch.py  boxy_sim.launch.py  boxy_ur3_test.launch.py
iai_boxy_torso/: CMakeLists.txt  package.xml
iai_boxy_torso/launch/: display.launch.py
iai_dualarm_description/: package.xml
iai_dualarm_description/config/: ur5_left_arm_calibration.yaml  ur5_right_arm_calibration.yaml
iai_dualarm_description/robots/: dualarm_ur5s_one_gripper.urdf.xacro
iai_kms_40_description/launch/: display.launch.py
iai_kuka_lwr4_description/: CMakeLists.txt  package.xml
iai_kuka_lwr4_description/defs/: util_defs.xml
iai_kuka_lwr4_description/launch/: display.launch.py
iai_kuka_lwr4_description/urdf/: kuka_lwr_arm.urdf.xacro
iai_table_robot_description/: package.xml
iai_table_robot_description/launch/: display.launch.py
iai_table_robot_description/urdf/: ur5_table.urdf.xacro
iai_ur3/: CMakeLists.txt  package.xml  urdf.rviz
iai_ur3/launch/: display.launch.py
iai_ur3/robots/: iai_ur3.urdf
iai_urg_kevin_robot_description/: CMakeLists.txt  package.xml
iai_urg_kevin_robot_description/launch/: kevin_rviz.launch.py
src/iai_boxy_base/: CMakeLists.txt
src/iai_boxy_base/launch/: visualise.launch.py
src/iai_boxy_base/urdf/: base.urdf
src/iai_boxy_base_2/: CMakeLists.txt  package.xml
src/iai_boxy_bringup/: CMakeLists.txt  package.xml
src/iai_boxy_bringup/config/: boxy_start_config.yaml  odometrysimulationconfig.yaml
src/iai_boxy_bringup/launch/: boxy_loopback_sim_no_controllers.launch.py  omnidrive.launch.py
src/iai_boxy_bringup/rviz2/: boxybringup.rviz
src/iai_boxy_torso/robots/: torso.urdf
src/iai_boxy_torso/rviz2/: torso.rviz
src/iai_dlr_rollin_justin/: CMakeLists.txt  package.xml
src/iai_dualarm_description/: CMakeLists.txt
src/iai_dualarm_description/config/: ur5_real_left_arm_control.yaml  ur5_real_right_arm_control.yaml
src/iai_dualarm_description/launch/: display_dualarm_ur5s_one_gripper.launch.py  real_dualarm_ur5s_one_gripper.launch.py
src/iai_kms_40_description/: CMakeLists.txt  package.xml
src/iai_kms_40_description/rviz2/: kms_40.rviz
src/iai_kms_40_description/urdf/: kms_40.urdf.xacro
src/iai_kuka_lwr4_description/rviz2/: lwr4.rviz
src/iai_kuka_lwr4_description/urdf/: materials.xml
src/iai_table_robot_description/: CMakeLists.txt  package.xml
src/iai_ur3/: CMakeLists.txt
src/iai_ur3/launch/: display.launch.py
src/iai_ur3/rviz2/: urdf.rviz
src/iai_urg_kevin_robot_description/rviz2/: default.rviz
