<?xml version="1.0"?>
<package format="3">
  <name>iai_adapter_iso50_kinect2_description</name>
  <version>0.0.0</version>
  <description>The iai_adapter_iso50_kinect2_description package</description>

  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>
  
  <license>GPLv3</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  
  <exec_depend>xacro</exec_depend>
  <!-- Add other dependencies as needed -->
  <!-- <exec_depend>some_runtime_dependency</exec_depend> -->
  <!-- <test_depend>gtest</test_depend> -->

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
