<package format="3">
  <name>iai_dualarm_description</name>
  <version>0.0.0</version>
  <description>The iai_dualarm_description package</description>


  <maintainer email="huerkamp@uni-bremen.de">huerkamp</maintainer>

  <license>TODO</license>


  <!-- Build tool dependencies for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <!-- Export section for ROS 2 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
