<package format="3">
  <name>iai_urg_kevin_robot_description</name>
  <version>1.0.0</version>
  <description>
    The kevin_robot_description package.
  </description>

  <maintainer email="rmartin@robotnik.es">Rafael Martin</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/kevin_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/kevin_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/kevin_common/issues</url>

  <!-- Build tool dependencies for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <!-- Export section for ROS 2 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
