<?xml version="1.0"?>
<package format="3">
  <name>iai_boxy_bringup</name>
  <version>0.0.0</version>
  <description>The iai_boxy_bringup package</description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/code-iai/iai_control_pkgs/issues</url>
  <url type="repository">https://github.com/code-iai/iai_control_pkgs</url>

  <!-- Build and execution dependencies for ROS2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>iai_boxy_controller_configuration</depend>
  <depend>iai_boxy_base</depend>
  <depend>iai_boxy_base_2</depend>
  <depend>dlr_action_bridge</depend>
  <depend>kdl_arm_kinematics</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <!-- Test dependencies (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
